website/versioned_docs/version-2.11.10/api/Humanizer.md
## Humanizer Namespace

| Classes | |
| :--- | :--- |
| [ByteSizeExtensions](Humanizer.ByteSizeExtensions.md 'Humanizer\.ByteSizeExtensions') | Provides extension methods for ByteSize |
| [CasingExtensions](Humanizer.CasingExtensions.md 'Humanizer\.CasingExtensions') | ApplyCase method to allow changing the case of a sentence easily |
| [CollectionHumanizeExtensions](Humanizer.CollectionHumanizeExtensions.md 'Humanizer\.CollectionHumanizeExtensions') | Humanizes an IEnumerable into a human readable list |
| [DateHumanizeExtensions](Humanizer.DateHumanizeExtensions.md 'Humanizer\.DateHumanizeExtensions') | Humanizes DateTime into human readable sentence |
| [DateToOrdinalWordsExtensions](Humanizer.DateToOrdinalWordsExtensions.md 'Humanizer\.DateToOrdinalWordsExtensions') | Humanizes DateTime into human readable sentence |
| [EnglishArticle](Humanizer.EnglishArticle.md 'Humanizer\.EnglishArticle') | Contains methods for removing, appending and prepending article prefixes for sorting strings ignoring the article\. |
| [EnumDehumanizeExtensions](Humanizer.EnumDehumanizeExtensions.md 'Humanizer\.EnumDehumanizeExtensions') | Contains extension methods for dehumanizing Enum string values\. |
| [EnumHumanizeExtensions](Humanizer.EnumHumanizeExtensions.md 'Humanizer\.EnumHumanizeExtensions') | Contains extension methods for humanizing Enums |
| [HeadingExtensions](Humanizer.HeadingExtensions.md 'Humanizer\.HeadingExtensions') | Contains extensions to transform a number indicating a heading into the  textual representation of the heading\. |
| [In](Humanizer.In.md 'Humanizer\.In') | |
| [In\.Eight](Humanizer.In.Eight.md 'Humanizer\.In\.Eight') | |
| [In\.Five](Humanizer.In.Five.md 'Humanizer\.In\.Five') | |
| [In\.Four](Humanizer.In.Four.md 'Humanizer\.In\.Four') | |
| [In\.Nine](Humanizer.In.Nine.md 'Humanizer\.In\.Nine') | |
| [In\.One](Humanizer.In.One.md 'Humanizer\.In\.One') | |
| [In\.Seven](Humanizer.In.Seven.md 'Humanizer\.In\.Seven') | |
| [In\.Six](Humanizer.In.Six.md 'Humanizer\.In\.Six') | |
| [In\.Ten](Humanizer.In.Ten.md 'Humanizer\.In\.Ten') | |
| [In\.Three](Humanizer.In.Three.md 'Humanizer\.In\.Three') | |
| [In\.Two](Humanizer.In.Two.md 'Humanizer\.In\.Two') | |
| [InDate](Humanizer.InDate.md 'Humanizer\.InDate') | |
| [InDate\.Eight](Humanizer.InDate.Eight.md 'Humanizer\.InDate\.Eight') | |
| [InDate\.Five](Humanizer.InDate.Five.md 'Humanizer\.InDate\.Five') | |
| [InDate\.Four](Humanizer.InDate.Four.md 'Humanizer\.InDate\.Four') | |
| [InDate\.Nine](Humanizer.InDate.Nine.md 'Humanizer\.InDate\.Nine') | |
| [InDate\.One](Humanizer.InDate.One.md 'Humanizer\.InDate\.One') | |
| [InDate\.Seven](Humanizer.InDate.Seven.md 'Humanizer\.InDate\.Seven') | |
| [InDate\.Six](Humanizer.InDate.Six.md 'Humanizer\.InDate\.Six') | |
| [InDate\.Ten](Humanizer.InDate.Ten.md 'Humanizer\.InDate\.Ten') | |
| [InDate\.Three](Humanizer.InDate.Three.md 'Humanizer\.InDate\.Three') | |
| [InDate\.Two](Humanizer.InDate.Two.md 'Humanizer\.InDate\.Two') | |
| [InflectorExtensions](Humanizer.InflectorExtensions.md 'Humanizer\.InflectorExtensions') | Inflector extensions |
| [MetricNumeralExtensions](Humanizer.MetricNumeralExtensions.md 'Humanizer\.MetricNumeralExtensions') | Contains extension methods for changing a number to Metric representation \(ToMetric\) and from Metric representation back to the number \(FromMetric\) |
| [NoMatchFoundException](Humanizer.NoMatchFoundException.md 'Humanizer\.NoMatchFoundException') | This is thrown on String\.DehumanizeTo enum when the provided string cannot be mapped to the target enum |
| [NumberToNumberExtensions](Humanizer.NumberToNumberExtensions.md 'Humanizer\.NumberToNumberExtensions') | Number to Number extensions |
| [NumberToTimeSpanExtensions](Humanizer.NumberToTimeSpanExtensions.md 'Humanizer\.NumberToTimeSpanExtensions') | Number to TimeSpan extensions |
| [NumberToWordsExtension](Humanizer.NumberToWordsExtension.md 'Humanizer\.NumberToWordsExtension') | Transform a number into words; e\.g\. 1 =\> one |
| [On](Humanizer.On.md 'Humanizer\.On') | |
| [On\.April](Humanizer.On.April.md 'Humanizer\.On\.April') | Provides fluent date accessors for April |
| [On\.August](Humanizer.On.August.md 'Humanizer\.On\.August') | Provides fluent date accessors for August |
| [On\.December](Humanizer.On.December.md 'Humanizer\.On\.December') | Provides fluent date accessors for December |
| [On\.February](Humanizer.On.February.md 'Humanizer\.On\.February') | Provides fluent date accessors for February |
| [On\.January](Humanizer.On.January.md 'Humanizer\.On\.January') | Provides fluent date accessors for January |
| [On\.July](Humanizer.On.July.md 'Humanizer\.On\.July') | Provides fluent date accessors for July |
| [On\.June](Humanizer.On.June.md 'Humanizer\.On\.June') | Provides fluent date accessors for June |
| [On\.March](Humanizer.On.March.md 'Humanizer\.On\.March') | Provides fluent date accessors for March |
| [On\.May](Humanizer.On.May.md 'Humanizer\.On\.May') | Provides fluent date accessors for May |
| [On\.November](Humanizer.On.November.md 'Humanizer\.On\.November') | Provides fluent date accessors for November |
| [On\.October](Humanizer.On.October.md 'Humanizer\.On\.October') | Provides fluent date accessors for October |
| [On\.September](Humanizer.On.September.md 'Humanizer\.On\.September') | Provides fluent date accessors for September |
| [OnDate](Humanizer.OnDate.md 'Humanizer\.OnDate') | |
| [OnDate\.April](Humanizer.OnDate.April.md 'Humanizer\.OnDate\.April') | Provides fluent date accessors for April |
| [OnDate\.August](Humanizer.OnDate.August.md 'Humanizer\.OnDate\.August') | Provides fluent date accessors for August |
| [OnDate\.December](Humanizer.OnDate.December.md 'Humanizer\.OnDate\.December') | Provides fluent date accessors for December |
| [OnDate\.February](Humanizer.OnDate.February.md 'Humanizer\.OnDate\.February') | Provides fluent date accessors for February |
| [OnDate\.January](Humanizer.OnDate.January.md 'Humanizer\.OnDate\.January') | Provides fluent date accessors for January |
| [OnDate\.July](Humanizer.OnDate.July.md 'Humanizer\.OnDate\.July') | Provides fluent date accessors for July |
| [OnDate\.June](Humanizer.OnDate.June.md 'Humanizer\.OnDate\.June') | Provides fluent date accessors for June |
| [OnDate\.March](Humanizer.OnDate.March.md 'Humanizer\.OnDate\.March') | Provides fluent date accessors for March |
| [OnDate\.May](Humanizer.OnDate.May.md 'Humanizer\.OnDate\.May') | Provides fluent date accessors for May |
| [OnDate\.November](Humanizer.OnDate.November.md 'Humanizer\.OnDate\.November') | Provides fluent date accessors for November |
| [OnDate\.October](Humanizer.OnDate.October.md 'Humanizer\.OnDate\.October') | Provides fluent date accessors for October |
| [OnDate\.September](Humanizer.OnDate.September.md 'Humanizer\.OnDate\.September') | Provides fluent date accessors for September |
| [OrdinalizeExtensions](Humanizer.OrdinalizeExtensions.md 'Humanizer\.OrdinalizeExtensions') | Ordinalize extensions |
| [PrepositionsExtensions](Humanizer.PrepositionsExtensions.md 'Humanizer\.PrepositionsExtensions') | [System\.DateTime](https://learn.microsoft.com/en-us/dotnet/api/system.datetime 'System\.DateTime') extensions related to spatial or temporal relations |
| [RomanNumeralExtensions](Humanizer.RomanNumeralExtensions.md 'Humanizer\.RomanNumeralExtensions') | Contains extension methods for changing a number to Roman representation \(ToRoman\) and from Roman representation back to the number \(FromRoman\) |
| [StringDehumanizeExtensions](Humanizer.StringDehumanizeExtensions.md 'Humanizer\.StringDehumanizeExtensions') | Contains extension methods for dehumanizing strings\. |
| [StringExtensions](Humanizer.StringExtensions.md 'Humanizer\.StringExtensions') | Extension methods for String type\. |
| [StringHumanizeExtensions](Humanizer.StringHumanizeExtensions.md 'Humanizer\.StringHumanizeExtensions') | Contains extension methods for humanizing string values\. |
| [TimeSpanHumanizeExtensions](Humanizer.TimeSpanHumanizeExtensions.md 'Humanizer\.TimeSpanHumanizeExtensions') | Humanizes TimeSpan into human readable form |
| [To](Humanizer.To.md 'Humanizer\.To') | A portal to string transformation using IStringTransformer |
| [ToQuantityExtensions](Humanizer.ToQuantityExtensions.md 'Humanizer\.ToQuantityExtensions') | Provides extensions for formatting a [System\.String](https://learn.microsoft.com/en-us/dotnet/api/system.string 'System\.String') word as a quantity\. |
| [TruncateExtensions](Humanizer.TruncateExtensions.md 'Humanizer\.TruncateExtensions') | Allow strings to be truncated |
| [Truncator](Humanizer.Truncator.md 'Humanizer\.Truncator') | Gets a ITruncator |
| [TupleizeExtensions](Humanizer.TupleizeExtensions.md 'Humanizer\.TupleizeExtensions') | Convert int to named tuple strings \(1 \-\> 'single', 2\-\> 'double' etc\.\)\. Only values 1\-10, 100, and 1000 have specific names\. All others will return 'n\-tuple'\. |

| Interfaces | |
| :--- | :--- |
| [ICulturedStringTransformer](Humanizer.ICulturedStringTransformer.md 'Humanizer\.ICulturedStringTransformer') | Can transform a string with the given culture |
| [IStringTransformer](Humanizer.IStringTransformer.md 'Humanizer\.IStringTransformer') | Can transform a string |
| [ITruncator](Humanizer.ITruncator.md 'Humanizer\.ITruncator') | Can truncate a string\. |

| Enums | |
| :--- | :--- |
| [EnglishArticles](Humanizer.EnglishArticles.md 'Humanizer\.EnglishArticles') | Definite and Indefinite English Articles |
| [GrammaticalCase](Humanizer.GrammaticalCase.md 'Humanizer\.GrammaticalCase') | Options for specifying the desired grammatical case for the output words |
| [GrammaticalGender](Humanizer.GrammaticalGender.md 'Humanizer\.GrammaticalGender') | Options for specifying the desired grammatical gender for the output words |
| [HeadingStyle](Humanizer.HeadingStyle.md 'Humanizer\.HeadingStyle') | Style for the cardinal direction humanization |
| [LetterCasing](Humanizer.LetterCasing.md 'Humanizer\.LetterCasing') | Options for specifying the desired letter casing for the output string |
| [MetricNumeralFormats](Humanizer.MetricNumeralFormats.md 'Humanizer\.MetricNumeralFormats') | Flags for formatting the metric representation of numerals\. |
| [OnNoMatch](Humanizer.OnNoMatch.md 'Humanizer\.OnNoMatch') | Dictating what should be done when a match is not found \- currently used only for DehumanizeTo |
| [Plurality](Humanizer.Plurality.md 'Humanizer\.Plurality') | Provides hint for Humanizer as to whether a word is singular, plural or with unknown plurality |
| [ShowQuantityAs](Humanizer.ShowQuantityAs.md 'Humanizer\.ShowQuantityAs') | Enumerates the ways of displaying a quantity value when converting a word to a quantity string\. |
| [TruncateFrom](Humanizer.TruncateFrom.md 'Humanizer\.TruncateFrom') | Truncation location for humanizer |
